# Chess_Artificial_Intelligence

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: main.cpp
include/: Board.h  Evaluator.h  InferenceInterface.h  MoveGenerator.h  Search.h  UciInterface.h
src/core/board/: Board.cpp
src/core/move_generator/: MoveGenerator.cpp
src/eval/: Evaluator.cpp
src/interfaces/uci/: UciInterface.cpp
src/search/: Search.cpp
tests/: perft.cpp
